# trivisionx-ai

./: .editorconfig  .gitignore  License  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  run.ps1  run.sh  vercel.json
.github/: CODE_OF_CONDUCT.md  (+2 more)
backend/: Dockerfile  backend.err  check_embeddings.py  index.py  pyproject.toml  requirements.txt  test_cached_request.py
backend/src/: main.py
backend/src/agents/: AGENTS.md
backend/src/agents/langgraph/: graph.py  state.py
backend/src/api/: conversations.py
backend/src/api/routes/: auth_routes.py  chat_routes.py  contact_routes.py  conversations_routes.py  github_auth.py  google_auth.py  health_routes.py  models_routes.py  report_routes.py  upload_routes.py
backend/src/core/: cache.py  config.py  constants.py  exceptions.py  http.py  limiter.py  llm_factory.py  logger.py  security.py
backend/src/database/: mongo.py
backend/src/database/mongodb/: connection.py  indexes.py
backend/src/middleware/: fastapi_compression.py  prompt_injection_guard.py  request_logger.py
backend/src/rag/embeddings/: google_embeddings.py  hf_embeddings.py
backend/src/rag/ingestion/: chunking.py  docx_loader.py  embedding_pipeline.py  metadata_extractor.py  pdf_loader.py  text_loader.py
backend/src/schemas/: chat.py  contact.py  conversation.py  user.py
backend/src/services/: chat_service.py  llm_service.py  report_service.py
backend/src/utils/: markdown_export.py  token_counter.py  validators.py
backend/src/workflows/: research_workflow.py
backend/tests/: conftest.py  test_rag.py
(+139 files in other folders)
